# miso-video

./: README.md  cabal.project  flake.nix  miso-video-test.cabal  miso-video.cabal
src/: Main.hs  Model.hs
static/: backloop_hs.webm  index.html  playground.html
